--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
     "redis": "^4.6.10"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
